Add compatibility with Plone 4.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache:
   - eggs
   - parts/node
 env:
+- PLONE_VERSION=4.2 VERSIONS=versions:Products.ResourceRegistries=2.2.12
 - PLONE_VERSION=4.3
 - PLONE_VERSION=5.0
 - PLONE_VERSION=5.1
@@ -14,8 +15,8 @@ matrix:
 install:
 - sed -ie "s#test-4.3#test-$PLONE_VERSION#" buildout.cfg
 - python bootstrap.py
-- bin/buildout annotate
-- bin/buildout
+- bin/buildout $VERSIONS annotate
+- bin/buildout $VERSIONS
 before_script:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
